<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".views.actions.WaterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackButNotSoBlack"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/glass"
            android:contentDescription="@string/glass_icon" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="48dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/water_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/glass"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/water_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_250ml"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/glass_plus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_add_24"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:foregroundGravity="center"
                android:src="@drawable/ic_baseline_add_24" />

            <TextView
                android:id="@+id/glass_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <Button
                android:id="@+id/glass_minus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_remove_24"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:foregroundGravity="center"
                android:outlineSpotShadowColor="@color/white"
                android:src="@drawable/ic_baseline_remove_24"

                />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackButNotSoBlack"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/bottle_icon"
            android:src="@drawable/bottle" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="48dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/water_bottle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/bottle"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bottle_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_l"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bottle_plus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_add_24"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:foregroundGravity="center"
                android:src="@drawable/ic_baseline_add_24" />

            <TextView
                android:id="@+id/bottle_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/cero"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <Button
                android:id="@+id/bottle_minus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_remove_24"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:foregroundGravity="center"
                android:outlineSpotShadowColor="@color/white"
                android:src="@drawable/ic_baseline_remove_24" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:foregroundGravity="center"
        android:outlineSpotShadowColor="@color/white"
        android:text="@string/guardar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        />

</LinearLayout>