<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackButNotSoBlack"
    android:orientation="vertical"
    tools:context=".views.home.ActionsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/actionWaterCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/primaryLight"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_margin="20dp"
            android:src="@drawable/water"
            android:contentDescription="@string/water_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/water"
            android:textSize="20sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/actionMyRecordsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/primaryLight"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_margin="20dp"
            android:src="@drawable/register"
            android:contentDescription="@string/register_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/my_records"
            android:textSize="20sp" />
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>