<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".views.LoginFragment">

    <include
        layout="@layout/app_logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginVertical="40dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="email"
            android:background="@drawable/rounded_edit_text"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackButNotSoBlack" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginEmailInput"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edit_text"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackButNotSoBlack" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginPasswordInput"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_button"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/login_button"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/loginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="end"
            android:text="@string/login_register"
            android:textColor="@color/primary" />
    </RelativeLayout>

    <TextView
        android:id="@+id/loginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="#D2300709"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/primaryRed"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>