<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.home.ProfileFragment"
    android:layout_margin="4dp">
    >

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackButNotSoBlack"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:fontFamily="@font/roboto_regular"
                android:padding="2dp"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/rounded_text_view"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/roboto_black"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="2dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/primaryDark"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackButNotSoBlack"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:fontFamily="@font/roboto_regular"
                android:padding="2dp"
                android:text="@string/input_phone"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/userPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/rounded_text_view"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/roboto_black"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="2dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/primaryDark"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackButNotSoBlack"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:fontFamily="@font/roboto_regular"
                android:padding="2dp"
                android:text="@string/input_email"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/rounded_text_view"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/roboto_black"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="2dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/primaryDark"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCloseSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/roboto_black"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="6dp"
        android:text="@string/close_session"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>